--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -17,8 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginRight="13dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:elevation="100dp"
         card_view:cardBackgroundColor="@android:color/white"
@@ -31,9 +31,10 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
+                android:layout_marginRight="25dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:padding="0dp">
 
                 <fragment
                     android:id="@+id/autocomplete_fragment1"
@@ -47,7 +48,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginRight="50dp"
+                    android:layout_marginRight="48dp"
+                    android:layout_marginLeft="3dp"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/dotted" />
 
@@ -62,12 +64,12 @@
             </LinearLayout>
             <ImageView
                 android:id="@+id/send"
+                android:layout_marginRight="5dp"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"
                 android:layout_alignParentRight="true"
-                android:layout_width="36dp"
-                android:src="@drawable/places_ic_search"
-                android:layout_height="36dp" />
+                android:layout_width="45dp"
+                android:src="@mipmap/map_search"
+                android:layout_height="45dp" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
