--- a/app/src/main/res/layout/contact_emergency_support.xml
+++ b/app/src/main/res/layout/contact_emergency_support.xml
@@ -47,32 +47,37 @@
                 android:id="@+id/addContactLayout">
 
                 <TextView
+                    android:id="@+id/nameValue"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:paddingTop="5dp"
-                    android:text="Add Emergency Contact"
+                    android:text="Name: "
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@color/colorButton"
                     />
 
 
-                <Button
-                    android:id="@+id/infoAddContact"
-                    android:layout_width="25dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="fill_vertical"
-                    android:background="@drawable/tooltips"
-                    android:backgroundTint="@color/colorButton" />
+                <TextView
+                    android:id="@+id/phoneNumberValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingTop="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="Phone Number"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorButton"
+                    />
 
                 <Button
-                    android:id="@+id/addContact"
+                    android:id="@+id/editContact"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_gravity="right"
                     android:layout_marginLeft="20dp"
 
-                    android:background="@drawable/add"
+                    android:background="@drawable/edit"
                     android:backgroundTint="@color/colorButton" />
 
 
@@ -87,67 +92,67 @@
 
 
     <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="25dp"
-    >
-
-
-
-    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        card_view:cardCornerRadius="10dp"
-        card_view:contentPadding="10dp"
-        card_view:cardBackgroundColor="@color/colorWhite"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:layout_marginTop="25dp"
         >
 
-        <LinearLayout
+
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="3">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            card_view:cardCornerRadius="10dp"
+            card_view:contentPadding="10dp"
+            card_view:cardBackgroundColor="@color/colorWhite"
+            android:gravity="center"
+            >
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="5dp"
-                android:text="Location Sharing"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorButton"
-                />
+                android:orientation="horizontal"
+                android:layout_weight="3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingTop="5dp"
+                    android:text="Location Sharing"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorButton"
+                    />
 
 
-            <Button
-                android:id="@+id/infoShareLocation"
-                android:layout_width="25dp"
-                android:layout_height="20dp"
-                android:layout_gravity="fill_vertical"
-                android:background="@drawable/tooltips"
-                android:backgroundTint="@color/colorButton" />
+                <Button
+                    android:id="@+id/infoShareLocation"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="fill_vertical"
+                    android:background="@drawable/tooltips"
+                    android:backgroundTint="@color/colorButton" />
 
-            <Button
-                android:id="@+id/sendLocation"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="right"
-                android:layout_marginLeft="80dp"
+                <Button
+                    android:id="@+id/sendLocation"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="80dp"
 
-                android:background="@drawable/share"
-                android:backgroundTint="@color/colorButton" />
-
-
-        </LinearLayout>
+                    android:background="@drawable/share"
+                    android:backgroundTint="@color/colorButton" />
 
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
