--- a/app/src/main/res/layout/add_contact.xml
+++ b/app/src/main/res/layout/add_contact.xml
@@ -25,28 +25,41 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_marginTop="100dp"
         android:orientation="vertical"
         android:layout_weight="3">
 
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/text1"
+            android:text="Add Emergency Contact"
+            android:layout_centerHorizontal="true"
+            android:typeface="sans"
+            android:textStyle="bold"
+            android:textColor="@color/colorButton"
+            android:textSize="20sp"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/card1"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_below="@+id/text1"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            card_view:cardBackgroundColor="@color/colorGreyPageBackground"
+            android:layout_centerInParent="true"
+            card_view:cardBackgroundColor="@color/colorWhite"
             card_view:cardCornerRadius="7dp"
-            card_view:contentPadding="1dp"
+            android:layout_marginTop="30sp"
+            card_view:contentPadding="4dp"
             android:layout_weight="1">
 
             <EditText
                 android:id="@+id/userName"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="left"
-                android:hint="Username"
+                android:hint="Name"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
         </android.support.v7.widget.CardView>
@@ -55,18 +68,20 @@
         <android.support.v7.widget.CardView
 
             android:id="@+id/card2"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="60dp"
-            card_view:cardBackgroundColor="@color/colorGreyPageBackground"
+            android:layout_below="@+id/card1"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_centerInParent="true"
+            card_view:cardBackgroundColor="@color/colorWhite"
             card_view:cardCornerRadius="7dp"
-            card_view:contentPadding="1dp"
+            card_view:contentPadding="4dp"
             android:layout_weight="1">
 
             <EditText
                 android:id="@+id/phoneNumber"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:gravity="left"
@@ -77,19 +92,20 @@
 
 
         <Button
-            android:layout_weight="1"
+            android:layout_below="@+id/card2"
             android:id="@+id/addContactButton"
-            android:layout_width="115dp"
-            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/button_bg_rounded_corners"
             android:text="Add Contact"
-            android:layout_gravity="center"
-            android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/colorWhite"
             android:textStyle="bold"
-            android:typeface="sans" />
+            android:typeface="sans"
+            android:padding="9sp"
+            />
 
     </RelativeLayout>
 
