--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -15,7 +15,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginBottom="10dp"
@@ -27,8 +27,8 @@
         card_view:cardCornerRadius="7dp">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             >
 
             <LinearLayout
@@ -75,7 +75,33 @@
                 android:layout_height="45dp" />
 
         </RelativeLayout>
+
     </android.support.v7.widget.CardView>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="10dp">
+        <Button
+            android:id="@+id/infoAddContact"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:background="@drawable/tooltips"
+            android:backgroundTint="@color/colorButton"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="Currently only available for Melbourne city area."
+            android:textSize="12sp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/colorButton"
+            android:typeface="sans"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -119,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
                 android:textStyle="bold"
-                android:textSize="25dp"
+                android:textSize="23dp"
                 android:text="9 min"></TextView>
 
             <TextView
@@ -129,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textStyle="bold"
-                android:textSize="25dp"
+                android:textSize="23dp"
                 android:text="(500m)"></TextView>
         </LinearLayout>
 
