--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -29,6 +29,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/layout"
+                android:layout_weight="3"
+                >
+
             <android.support.v7.widget.CardView
             android:id="@+id/cardview2"
             android:layout_width="match_parent"
@@ -39,7 +47,9 @@
             android:layout_marginTop="8dp"
             android:elevation="100dp"
             card_view:cardBackgroundColor="@android:color/white"
-            card_view:cardCornerRadius="5dp">
+            card_view:cardCornerRadius="5dp"
+            android:layout_weight="2"
+            android:layout_marginBottom="5dp">
 
                 <fragment
                     android:id="@+id/autocomplete_fragment1"
@@ -50,21 +60,42 @@
                     android:hint="Starting Place" />
 
 
-    </android.support.v7.widget.CardView>
+             </android.support.v7.widget.CardView>
 
-             <android.support.v7.widget.CardView
+            <Button
+                android:id="@+id/currentlocation"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/userlocation2"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="2dp"
+                android:elevation="100dp"
+               />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/layout1"
+                android:layout_weight="3"
+                android:layout_below="@+id/layout"
+                >
+            <android.support.v7.widget.CardView
                 android:id="@+id/cardview3"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:elevation="100dp"
                 card_view:cardBackgroundColor="@android:color/white"
                 card_view:cardCornerRadius="5dp"
-                android:layout_below="@+id/cardview2"
-                android:layout_marginBottom="8dp">
+                android:layout_below="@+id/layout"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="2">
 
                 <fragment
                     android:id="@+id/autocomplete_fragment2"
@@ -73,10 +104,19 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorHomeSubTitle"
                     android:hint="Destination Place" />
+             </android.support.v7.widget.CardView>
 
-
-
-    </android.support.v7.widget.CardView>
+                <Button
+                    android:id="@+id/info2"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/userlocation2"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="2dp"
+                    android:elevation="100dp"
+                    />
+            </LinearLayout>
 </RelativeLayout>
     </android.support.v7.widget.CardView>
     <LinearLayout
@@ -85,7 +125,7 @@
         android:layout_gravity="bottom|right"
         android:layout_marginTop="10dp">
         <Button
-            android:id="@+id/infoAddContact"
+            android:id="@+id/info"
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:background="@drawable/tooltips"
@@ -123,7 +163,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/toup" />
+            android:src="@drawable/slideupanddown" />
 
         <LinearLayout
             android:layout_width="match_parent"
