--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -281,6 +281,42 @@
                 android:text="10"></TextView>
 
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        android:weightSum="3">
+
+
+        <ImageView
+            android:id="@+id/sensorImage"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_weight="0.2"
+            android:src="@drawable/peoplesensor" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:gravity="left"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.7"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:text="Sensor Count"></TextView>
+
+        <TextView
+            android:id="@+id/sensorCount"
+            android:layout_width="0dp"
+            android:gravity="left"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:text="10"></TextView>
+
+    </LinearLayout>
 </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
