--- a/app/src/main/res/drawable/dotted.xml
+++ b/app/src/main/res/drawable/dotted.xml
@@ -8,17 +8,17 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/colorDivider"
+                android:color="@color/colorButton"
                 android:dashGap="3dp"
                 android:dashWidth="1dp" />
 
             <solid android:color="@android:color/transparent" />
 
             <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"
+                android:top="5dp" />
         </shape>
     </item>
 </layer-list>
