--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -66,7 +66,7 @@
                 android:id="@+id/currentlocation"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/userlocation2"
+                android:background="@drawable/locate"
                 android:layout_gravity="center"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
@@ -266,10 +266,10 @@
 
             <ImageView
                 android:id="@+id/policeImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="33dp"
+                android:layout_height="31dp"
                 android:layout_weight="0.2"
-                android:src="@drawable/police" />
+                android:src="@drawable/policenew2" />
 
             <TextView
                 android:layout_width="0dp"
@@ -309,10 +309,10 @@
 
         <ImageView
             android:id="@+id/openShopImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="33dp"
+            android:layout_height="31dp"
             android:layout_weight="0.2"
-            android:src="@drawable/shopper" />
+            android:src="@drawable/shopnew2" />
 
         <TextView
             android:layout_width="0dp"
@@ -353,10 +353,10 @@
 
             <ImageView
                 android:id="@+id/cctvImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="33dp"
+                android:layout_height="31dp"
                 android:layout_weight="0.2"
-                android:src="@drawable/cctv" />
+                android:src="@drawable/cctvnew2" />
 
             <TextView
                 android:layout_width="0dp"
@@ -397,10 +397,10 @@
 
         <ImageView
             android:id="@+id/sensorImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="33dp"
+            android:layout_height="31dp"
             android:layout_weight="0.2"
-            android:src="@drawable/peoplesensor" />
+            android:src="@drawable/sensornew2" />
 
         <TextView
             android:layout_width="0dp"
